--- a/android/app/main/res/values-ja/strings.xml
+++ b/android/app/main/res/values-ja/strings.xml
@@ -24,5 +24,5 @@
     <string name="open_file">ファイルを開く</string>
 
     <!-- URLs -->
-    <string name="url">https://appassets.androidplatform.net/camera/index.html</string>
+    <string name="url">https://appassets.androidplatform.net/privacy-camera/index.html</string>
 </resources>
