--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,5 +38,6 @@
   "eye_mask": "Eye Mask",
   "face_blur": "Face Blur",
   "black_out": "Blackout",
-  "back": "Back"
+  "back": "Back",
+  "face": "Face"
 }
